fix: 'updated on' alignment

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/topic/content.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/topic/content.less
@@ -4,6 +4,9 @@
       .updated__container {
         .updated__section {
           width: 100%;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
         }
       }
     }
@@ -42,6 +45,12 @@ html.adobeguides-text-spacing .base-topic-page-section div.topic .topic__updated
     margin-left: 0;
     width: 100%;
   }
+}
+.base-topic-page-section div.topic .topic__updated .updated__container .updated__section{
+  background-color: red;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 @media (min-width: 1024px) {
